@@ -13,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd April 16, 2020
+.Dd April 17, 2020
 .Dt ENTR 1
 .Os
 .Sh NAME
@@ -91,10 +91,14 @@ environment variable.
 If standard output is a TTY, the name of the shell and exit code is printed
 after each invocation.
 .It Fl z
-Exit after the utility completes.
+Exit after the
+.Ar utility
+completes.
 When combined with
 .Fl r
-the utility will be restarted again only in response to commands or file system
+the
+.Ar utility
+will be restarted again only in response to commands or file system
 events.
 .El
 .Pp
@@ -144,11 +148,12 @@ utility exits with one of the following values:
 .Bl -tag -width Ds -offset indent -compact
 .It 0
 Normal termination after receiving
-.Dv SIGINT /
-.Dv SIGTERM
+.Dv SIGINT
 or the
 .Fl z
-flag was set
+flag was set and the
+.Ar utility
+was executed successfully
 .It 1
 No regular files were provided as input or an error occurred
 .It 2
